--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -4,13 +4,15 @@
     {% for post in posts|sort(reverse=True, attribute='timestamp')  %}
 
     <div class="card col-lg-3 col-md-4 each-item">
-        <a href="{{ url_for('main.each_item', item_id=post.id)}}">
+  
+        <a href="{{ url_for('main.each_slug_post', slug=post.slug)}}">
             <img class="card-img-top item-image" src="{{ photos_path}}{{ post.photos }}"
                 alt="{{ post.title }}">
 
             <div class="card-body">
                 <h5 class="card-title">{{ post.title }}</h5>
         </a>
+
 
         <p class="card-text"><small class="text-muted test">{{ moment(post.timestamp).fromNow() }}</small></p>
     </div>
