--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -261,7 +261,7 @@
       <div class="post-new-item-div">
         {% if current_user.is_authenticated %}
         <a href="{{ url_for('main.post_new_item') }}">
-          <button type="button" class="btn btn-dark btn-lg button-custom">Post New Item</button></a>
+          <button type="button" class="btn btn-dark btn-lg post-button">Post New Item</button></a>
         {% endif %}
       </div>
     </div>
