--- a/app/templates/main/reply.html
+++ b/app/templates/main/reply.html
@@ -6,10 +6,28 @@
 
 {% block page_content %}
 
-<form method="POST">
-    <!-- sending email work in progress -->
-    <!-- also creating message page -->
-    {{ wtf.quick_form(form) }}
-    </form>
+<div class="reply-div">
 
+    <h1>This is about <strong>{{ item.title }}</strong>.</h1>
+<form method="POST">
+
+    <!-- {{ wtf.quick_form(form) }} -->
+
+    {{ form.hidden_tag() }}
+
+    <div class="mb-3">
+        <!-- {{form.description.label}} -->
+        {{form.description(class="form-control")}}
+
+        {% if form.description.errors %}
+        {% for error in form.description.errors %}
+        <span class="text-danger">{{ error }}</span><br>
+        {% endfor %}
+        {% endif %}
+      </div>
+
+      <button type="submit" class="btn btn-secondary btn-lg button-custom">Send Reply</button>
+
+    </form>
+</div>
 {% endblock %}
