--- a/app/templates/main/post-new-item.html
+++ b/app/templates/main/post-new-item.html
@@ -86,7 +86,7 @@
         {{ form.description(class='form-control')}}
       </div>
       
-      <button type="submit" class="btn btn-primary btn-lg button-custom">Submit</button>
+      <button type="submit" class="btn btn-secondary btn-lg button-custom">Submit</button>
 
 
 </form>
