--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -5,7 +5,7 @@
 
 {% block category %}{% endblock %}
 {% block page_content%}
-<div class="form-div">
+<div class="form-div2">
 <form class='forms' method="POST" novalidate>
 <!-- {{ wtf.quick_form(form) }} -->
 {{ form.hidden_tag() }}
