--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,9 +40,9 @@
       </span></h3>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <!-- <a class="nav-link active" aria-current="page" href="#">Home</a> -->
+          
           <a class="nav-link" href="{{ url_for('main.check_messages', username=current_user.username)}}">Messages
-            <!-- <span class="sr-only">(current)</span> -->
+            
             {% if current_user.question_received == 0 %}
             <span class="badge rounded-pill text-bg-secondary">{{ current_user.question_received }}</span>
             <span class="sr-only">unread messages</span>
@@ -88,99 +88,6 @@
   </div>
 </nav>
 
-
-<!-- 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-
-    <ul class="navbar-nav mr-auto">
-      {% if current_user.is_authenticated %}
-      <li class="nav-item active"> -->
-        <!-- <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> -->
-        <!-- <a class="nav-link" href="{{ url_for('main.check_messages', username=current_user.username)}}">Messages
-          <span class="sr-only">(current)</span>
-          <span class="badge badge-light">{{ current_user.question_received }}</span>
-          <span class="sr-only">unread messages</span>
-          <span class="badge badge-light">{{ current_user.question_answered }}</span>
-          <span class="sr-only">unread messages</span>
-      </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">
-          Profile
-      </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.logout') }}">Log Out</a>
-      </li>
-      </ul>
-      <span class="navbar-text">
-        Hi! {{current_user.username }}
-      </span>
-      {%else%}
-       
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.register') }}">Create New Account</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('auth.login') }}">Log In</a>
-      </li>
-      {% endif %}
-    </ul>
-    
-  </div>
-
-</nav> -->
-
-{#old bootstrap#}
-<!-- <nav class="navbar navbar-dark bg-dark nav1">
-    <div class="container-fluid">
-      <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
-
-
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          
-            {% if current_user.is_authenticated %}
-            <li class="dropdown">
-                   
-                <a href="#" class="dropdown-toggle nav-items" data-toggle="dropdown">
-                    {{current_user.username}} 
-                    <b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu nav-items2">
-                    <li>
-                        <a href="{{ url_for('main.user', username=current_user.username) }}">
-                            Profile
-                        </a>
-                    </li>
-                    <li>
-                        <a href="{{ url_for('main.check_messages', username=current_user.username)}}">Messages
-                            <span class="badge badge-light">{{ current_user.question_received }}</span>
-                            <span class="sr-only">unread messages</span>
-                            <span class="badge badge-light">{{ current_user.question_answered }}</span>
-                            <span class="sr-only">unread messages</span>
-                        </a>
-                       
-                    </li>
-                    <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
-                </ul>
-            </li>
-
-            {% else %}
-            <li><a class="nav-items" href="{{ url_for('auth.register') }}">Create New Account</a></li>
-            <li><a class="nav-items" href="{{ url_for('auth.login') }}">Log In</a></li>
-            {% endif %}
-        </ul>
-    </div>
-    </div>
-  </nav> -->
-
 {% endblock %}
 
 
@@ -193,7 +100,7 @@
         <button type="button" class="done" data-dismiss="alert">&times;</button>
         {{ msg }}
       </div> -->
-      <div class="alert alert-secondary alert-dismissible" role="alert">
+      <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         {{ msg }}
       </div>
@@ -203,30 +110,10 @@
     {% block category %}
 
     <div class="container custom-container">
-      <!-- <div class="category-div col-lg-12 col-md-12">  -->
-
-      <!-- <div class="dropdown dropdown-div">
-        <button class="btn btn-dark dropdown-toggle btn-lg button-custom" type="button" data-toggle="dropdown">Category
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="{{ url_for('main.home_living') }}">Home & Living</a></li>
-          <li><a href="{{ url_for('main.kitchen') }}">Kitchen</a></li>
-          <li><a href="{{ url_for('main.baby') }}">Baby</a></li>
-          <li><a href="{{ url_for('main.books') }}">Books</a></li>
-          <li><a href="{{ url_for('main.craft') }}">Crafts</a></li>
-          <li><a href="{{ url_for('main.electronics') }}">Electronics</a></li>
-          <li><a href="{{ url_for('main.pets') }}">Pets</a></li>
-          <li><a href="{{ url_for('main.clothing') }}">Clothing</a></li>
-          <li><a href="{{ url_for('main.bathroom') }}">Bathroom</a></li>
-          <li><a href="{{ url_for('main.toys') }}">Toys</a></li>
-          <li><a href="{{ url_for('main.jewellery') }}">Jewellery</a></li>
-        </ul>
-      </div> -->
-
+ 
       <div class="dropdown dropdown-div">
         <a class="btn btn-secondary dropdown-toggle btn-lg button-custom" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-          Category
+          Category Search
         </a>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <li><a class="dropdown-item" href="{{ url_for('main.home_living') }}">Home & Living</a></li>
@@ -243,10 +130,7 @@
         </ul>
       </div>
 
-
-
-
-      <div class="form-div">
+      <div class="form-div1">
         <form class="d-flex" method="GET" action="{{ url_for('main.search')}}">
           <div class="seach-field-div">
             <input class="form-control me-2" name="query" type="search" placeholder="Search" aria-label="Search">
