--- a/app/templates/main/search.html
+++ b/app/templates/main/search.html
@@ -1,5 +1,3 @@
-
-
 {% extends 'base.html' %}
 {% import "_macros.html" as macros %}
 
@@ -9,19 +7,21 @@
 {{ moment.include_moment() }}
 
 <div class="item-div">
-  <h1 class="category-title">Search keyword "<strong>{{ keyword }}</strong>". </h1>
+  <h1>Search keyword "<strong>{{ keyword }}</strong>". </h1>
   {% if results %}
   {% for result in results|sort(reverse=True, attribute='timestamp') %}
 
   <div class="card-deck">
-    <div class="card col-lg-3 col-md-4 each-item">
-     
-        <a href="{{ url_for('main.each_slug_post', slug=result.slug) }}"></a>
-        <img class="card-img-top item-image" src="{{ photos_path }}{{ result.photos }}" alt="{{ result.title }}">
-        <div class="card-body">
-          <h5 class="card-title">{{ result.title }}</h5></a>
-          <p class="card-text"><small class="text-muted test">{{ moment(result.timestamp).fromNow() }}</small></p>
-        </div>
+    <div class="card col-lg-3 col-md-4 col-sm-12 each-item">
+      
+      <a href="{{ url_for('main.each_slug_post', slug=result.slug) }}">
+        <div class="img-div">
+      <img class="card-img-top item-image" src="{{ photos_path }}{{ result.photos }}" alt="{{ result.title }}">
+    </div>
+      <div class="card-body">
+        <h5 class="card-title">{{ result.title }}</h5></a>
+        <p class="card-text"><small class="text-muted test">{{ moment(result.timestamp).fromNow() }}</small></p>
+      </div>
     </div>
     {% endfor %}
     {% else %}
@@ -29,14 +29,15 @@
    
     {% endif %}
   </div>
-  
-{% endblock %}
 
 
-{% block pagination %}
-{% if pagination %}
-<div class="pagination-div">
-  {{ macros.pagination_widget(pagination, '.index') }}
-</div>
-{% endif %}
-{% endblock %}
+  {% endblock %}
+
+
+  {% block pagination %}
+  {% if pagination %}
+  <div class="pagination-div">
+    {{ macros.pagination_widget(pagination, '.index') }}
+  </div>
+  {% endif %}
+  {% endblock %}
