--- a/app/templates/main/user.html
+++ b/app/templates/main/user.html
@@ -50,7 +50,7 @@
 {% if user == current_user %}
 <a class="btn btn-default button-custom" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
 {% endif %}
-{% if user == current_user and user.is_administrator() %}
+{% if current_user.is_administrator() %}
 <a class="btn btn-danger" href="{{ url_for('.admin_edit_profile', id=user.id) }}">Edit as Admin</a>
 {% endif %}
 </div>
