--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block title %}{{super()}}Freestuff - {% endblock %}
+{% block title %}{{super()}}Login{% endblock %}
 
 
 {% block category %}{% endblock %}
