--- a/app/templates/main/each_slug_post.html
+++ b/app/templates/main/each_slug_post.html
@@ -54,8 +54,7 @@
     <a href="{{ url_for('main.contact_giver', item_id=post.id) }}"><button type="button"
             class="btn btn-secondary button-custom">Contact {{ post.giver.username }}</button></a>
     {% endif %}
-    {% if current_user == post.giver %}
-    <!-- Want the button to appear for admin as well -->
+    {% if current_user == post.giver or current_user.is_administrator() %}
     <a href="{{ url_for('main.edit_post', item_id=post.id) }}"><button type="button" class="btn btn-warning">Edit
             Post</button></a>
     <a href="{{ url_for('main.delete_post', item_id=post.id) }}"><button type="button" class="btn btn-danger">Delete
