--- a/app/templates/main/user_edit_profile.html
+++ b/app/templates/main/user_edit_profile.html
@@ -6,15 +6,47 @@
 {% block category %}{% endblock %}
 
 {% block page_content %}
+<div class="post-new-item-div">
 <h1>Edit Your Profile</h1>
 
-<form method="POST">
+<form method="POST" novalidate>
 <!-- {{ form.hidden_tag() }}
 {{ form.name.label }}{{ form.name(id='my-field-id') }}
 {{ form.submit() }} -->
 
-{{ wtf.quick_form(form) }}
+{{ form.hidden_tag() }}
+    
+<div class="mb-3">
+    {{ form.name.label }}
+    {{ form.name(class='form-control') }}</div>
+
+
+  <div class="mb-3">
+    {{form.email.label}}
+    {{form.email(class="form-control")}}
+
+    {% if form.email.errors %}
+    {% for error in form.email.errors %}
+    <span class="text-danger">{{ error }}</span><br>
+    {% endfor %}
+    {% endif %}
+  </div>
+
+
+  <div class="mb-3">
+    {{form.location.label}}
+    {{form.location(class="form-control")}}
+  </div>
+
+  <div class="mb-3">
+    {{form.bio.label}}
+    {{form.bio(class="form-control")}}
+  </div>
+  
+  <button type="submit" class="btn btn-secondary btn-lg button-custom">Edit</button>
 
 </form>
+
+</div>
 
 {% endblock %}
