--- a/app/templates/main/admin_edit_profile.html
+++ b/app/templates/main/admin_edit_profile.html
@@ -44,11 +44,11 @@
         {{form.email.label}}
         {{form.email(class="form-control")}}
 
-        <!-- {% if form.email.errors %}
+        {% if form.email.errors %}
         {% for error in form.email.errors %}
         <span class="text-danger">{{ error }}</span><br>
         {% endfor %}
-        {% endif %} -->
+        {% endif %}
       </div>
 
 
