--- a/app/templates/main/edit-post.html
+++ b/app/templates/main/edit-post.html
@@ -7,8 +7,7 @@
 
 {% block page_content %}
 <div class="post-new-item-div">
-<h1>Edit Your Post</h1>
-<p>{{ item.title }}</p>
+<h1>Edit Your Post "<strong>{{ item.title }}</strong>"</h1>
 
 <form method="POST" enctype=multipart/form-data novalidate>
     <!-- {{ wtf.quick_form(form) }}
@@ -32,8 +31,8 @@
       </div>
 
       <div class="mb-3">
+        <div><a href="{{ url_for('main.delete_all_photos', item_id=item.id)}}"><button type="button" class="btn btn-danger">Delete All Photos</button></a></div>
         {{p_form.photo_one.label}}
-        <span><a href="{{ url_for('main.delete_all_photos', item_id=item.id)}}"><button type="button" class="btn btn-danger">Delete All Photos</button></a></span>
         {{p_form.photo_one_name(class="form-control", disabled=disabled, placeholder='No photo uploaded yet')}}
         {{p_form.photo_one(class="form-control")}}
 
