--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -10,4 +10,6 @@
 <p>Please check your inbox, and look for an email with a confirmation link.</p>
 <p>If you need a new one, no problem. Just <a href="{{ url_for('auth.resend_confirmation')}}">click here</a> and we'll send you a new one.</p>
 
+<br>
+<h3>From FreeStuff Admin Team</h3>
 {% endblock %}
