--- a/app/templates/mail/user_welcome.html
+++ b/app/templates/mail/user_welcome.html
@@ -1,6 +1,8 @@
 <h4>Welcome to FreeStuff, {{ user.name}}!</h4>
 
 <p>Give away your unnecessary things to someone who need them!</p>
-<p>Save money and the world!</p>
+<p>Less is better!</p>
 
 <a href="{{ link }}">Browse FreeStuff</a>
+
+<h5>From FreeStuff Admin Team</h5>
