--- a/app/templates/mail/confirm.html
+++ b/app/templates/mail/confirm.html
@@ -1,3 +1,5 @@
 <h4>Please click below link to confirm your email address. Thank you.</h4>
 
 <p>Here is the link <a href="{{ link }}">{{ link }}</a></p>
+
+<h3>From FreeStuff Admin Team</h3>
