--- a/app/templates/main/messages.html
+++ b/app/templates/main/messages.html
@@ -36,7 +36,7 @@
  
     <h4>Message received "<strong>{{ q.description }}</strong>" <span>
        
-        <a class='message-tag' href="{{ url_for('main.each_slug_post', slug=q.slug )}}">See the message</a></span></h4>
+        <a class='message-tag' href="{{ url_for('main.each_slug_post', slug=q_slug )}}">See the message</a></span></h4>
 
 {% endfor %}
 
