added sending email when user receive answer

--- a/app/templates/mail/admin_post_deleted.html
+++ b/app/templates/mail/admin_post_deleted.html
@@ -1,1 +1,5 @@
+<h4>Hi Admin!</h4>
+<p>Just to let you know ...</p>
 <p>The user:({{ user.username }}) has deleted one of his/her posts.</p>
+
+<h4>Have a good day!</h4>
