--- a/app/templates/mail/user_welcome.html
+++ b/app/templates/mail/user_welcome.html
@@ -1,8 +1,8 @@
-<h4>Welcome to FreeStuff, {{ user.name}}!</h4>
+<h4>Welcome to FreeStuff, {{ user.username}}!</h4>
 
 <p>Give away your unnecessary things to someone who need them!</p>
 <p>Less is better!</p>
 
 <a href="{{ link }}">Browse FreeStuff</a>
 
-<h5>From FreeStuff Admin Team</h5>
+<h4>From FreeStuff Admin Team</h4>
