--- a/app/templates/mail/admin_new_user.html
+++ b/app/templates/mail/admin_new_user.html
@@ -1,4 +1,4 @@
 <h4>Hi Admin!</h4>
-<br>
-<h4>This is to notify you that a new user {{ user.username }} has been added to FreeStuff.</h4>
+<p>This is to notify you that a new user {{ user.username }} has been added to FreeStuff.</p>
 
+<h4>Have a good day!</h4>
