--- a/app/templates/mail/confirm.html
+++ b/app/templates/mail/confirm.html
@@ -1,4 +1,6 @@
-<h4>Please click below link to confirm your email address. Thank you.</h4>
+
+<h3>Hello, {{user.username}}!</h3>
+<p>Please click below link to confirm your email address. Thank you.</p>
 
 <p>Here is the link <a href="{{ link }}">{{ link }}</a></p>
 
