--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,9 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
+    <img class='logo-img' src="{{ url_for('main.download_image', resource='freestuff_logo.png') }}" alt="">
     <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -113,7 +115,7 @@
  
       <div class="dropdown dropdown-div">
         <a class="btn btn-secondary dropdown-toggle btn-lg button-custom" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-          Category Search
+          Category
         </a>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
           <li><a class="dropdown-item" href="{{ url_for('main.home_living') }}">Home & Living</a></li>
