--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -550,6 +550,13 @@ p.speech.right:after {
 	margin-top:20px;
 }
 
+/* contact_admin.html */
+.logo-img2 {
+	width:36rem;
+	height:auto;
+	margin:auto;
+}
+
 
 
 
