--- a/app/templates/main/contact-giver.html
+++ b/app/templates/main/contact-giver.html
@@ -25,6 +25,7 @@
 
       <button type="submit" class="btn btn-secondary btn-lg button-custom">Send Question</button>
     </form>
+    <img class='logo-img2'src="{{ url_for('main.download_image', resource='freestuff_logo.png') }}" alt="freestuff-logo">
 </div>
 {% endblock %}
 
