--- a/app/templates/main/contact_admin.html
+++ b/app/templates/main/contact_admin.html
@@ -37,6 +37,8 @@
 
       <button type="submit" class="btn btn-secondary btn-lg button-custom">Send</button>
     </form>
+
+    <img class='logo-img2'src="{{ url_for('main.download_image', resource='freestuff_logo.png') }}" alt="freestuff-logo">
 </div>
 {% endblock %}
 
