--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,7 +29,7 @@
 
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <img class='logo-img' src="{{ url_for('main.download_image', resource='freestuff_logo.png') }}" alt="">
+    <img class='logo-img' src="{{ url_for('main.download_image', resource='freestuff_logo.png') }}" alt="freestuff-logo">
     <a class="navbar-brand nav-custom" href="{{ url_for('main.index')}}">FreeStuff</a>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
