--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -114,9 +114,20 @@ a:hover {
 	color:white;
 }
 
-.navbar-nav {
-	padding-left: 16px;
-}
+/* .navbar-nav {
+	padding-right: 16px;
+	text-align: right;
+	right:0;
+} */
+
+@media only screen and (max-width: 992px) {
+	.navbar-nav {
+		padding-right: 20px;
+		text-align: right;
+		right:0;
+	}
+  }
+
 
 .show {
 	display: inline !important;
