--- a/app/templates/main/each_slug_post.html
+++ b/app/templates/main/each_slug_post.html
@@ -39,8 +39,9 @@
 
           <div class="card-body info-tab">
             <p><small class="text-muted test">{{ moment.include_moment() }}{{ moment(post.timestamp).fromNow() }}</small></p>
-            <a href="{{ url_for('main.user', username=post.giver.username)}}">
-          <h5 class="card-title">By {{ post.giver.username }}</h5></a>
+           
+          <h5 class="card-title">By  <a href="{{ url_for('main.user', username=post.giver.username)}}">
+          {{ post.giver.username }}</h5></a>
           <h3 class="card-text post-description">{{ post.description }}</h3>
           
         </div>
