--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      {% if current_user.is_authenticated %}
+      {% if current_user.is_authenticated and session['logged_in'] == True %}
       <h3><span class="navbar-text">
         Hi! {{current_user.username }}
       </span></h3>
