--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -53,7 +53,7 @@
     {% endif %}
   </div>
   
-  <button type="submit" class="btn btn-secondary btn-lg button-custom">Login</button>
+  <button type="submit" class="btn btn-secondary btn-lg button-custom">Register</button>
 </form>
 </div>
 
