--- a/app/templates/main/user.html
+++ b/app/templates/main/user.html
@@ -48,9 +48,11 @@
 <div class="profile-buttons">
 {% if user == current_user %}
 <a class="btn btn-default button-custom" href="{{ url_for('.edit_profile') }}">Edit Profile</a>
+<a class="btn btn-success" href="{{ url_for('auth.reset_password') }}">Reset Password</a>
 {% endif %}
 {% if current_user.is_administrator() %}
 <a class="btn btn-danger" href="{{ url_for('.admin_edit_profile', id=user.id) }}">Edit as Admin</a>
+<a class="btn btn-success" href="{{ url_for('auth.reset_password') }}">Reset Password</a>
 {% endif %}
 </div>
 
