--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -43,8 +43,8 @@
     </form>
 
     
-    <p class="new-user"><a href="{{ url_for('auth.reset_request') }}">Forgot Password?</a></p>
+    <h3 class="new-user"><a href="{{ url_for('auth.reset_request') }}">Forgot Password?</a></h3>
 
-    <p class="new-user">New User? <a href="{{ url_for('auth.register')}}">Click here to register</a></p>
+    <h3 class="new-user">New User? <a href="{{ url_for('auth.register')}}">Register</a></h3>
 </div>
 {% endblock  %}  
